@@ -11,5 +11,5 @@ DIST eselect-1.0.12.tar.bz2 145806 RMD160 e163c48b98457b2d779f21e999ab5f2eda5749
 EBUILD eselect-1.0.10.ebuild 2007 RMD160 4550480d9914c04f77b614f918a00c488e0d29ec SHA1 b1b0d7062647bfe561b7a6b0d48bbe0a31e2aeb1 SHA256 6e1ab050424838bfe720654f585f6990a890167b899ce2967189c595232628d6
 EBUILD eselect-1.0.11-r2.ebuild 2366 RMD160 cd741be1715ec7254f46c2b38c22a1c8da7faa73 SHA1 b6cda71d2b337b1601ece5c05d3bdf615fcb84c7 SHA256 9e9809741fbee59983e4eac47993c422cec5d6c18efcf5e129a8003f05ea6f42
 EBUILD eselect-1.0.12.ebuild 2022 RMD160 c03f9ba7cd49e113f67db89849b914fea83b42e2 SHA1 c0bd0af11bde9b95b8fd372129f469818fbc37f4 SHA256 f7d166617d3d8c66a4066e5158a8fff7e163f58f7cc991b20f450800abced926
-MISC ChangeLog 13818 RMD160 52d44bbb4b726fc3397d80a9549a5f3d9faba7c1 SHA1 c92fad5ab3f1ec41bd3ff7420719005238ea2cec SHA256 d69618338589f966b1db65ed0dd5e45b389c60ef8844602cb37fdc6e81dba3c3
-MISC metadata.xml 226 RMD160 c17329676784fd7b99439a08e9e15d942763da61 SHA1 dd05a4ccd4cd23092fbf4248cb13b548d2b0130a SHA256 ef8f7fb97dfc4aed17d7da4859d4b9af2ab812238eee190ab015c57ee896127e
+MISC ChangeLog 13938 RMD160 3c3641281c9bf5e2bb73b9f541562114a19d2223 SHA1 1d95cc77004e6a1151b75528f28abb886ac74b8b SHA256 36460929a2916b6e54d81a73d87f4f983b6c8e603e18c7621fca5b65e8b70bf1
+MISC metadata.xml 338 RMD160 990868bdf26b0f56c3abc77b7b6e8150c9a739f5 SHA1 72a928377b977895e4bd443d1c8db879db5e9500 SHA256 efae48233f4b4513fe41fa80a4ecec7242bc08fb77bd8ba80d00deac671ebc03
