@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/eselect
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect/ChangeLog,v 1.86 2009/04/18 08:27:51 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect/ChangeLog,v 1.87 2009/04/28 09:50:12 ulm Exp $
+
+  28 Apr 2009; Ulrich Mueller <ulm@gentoo.org> metadata.xml, eselect-9999:
+  Add paludis USE flag for the live ebuild.
 
 *eselect-9999 (18 Apr 2009)
 *eselect-1.0.12 (18 Apr 2009)
